# autotools-example

./: Makefile.am  README  configure.ac
include/: Makefile.am  hello.h
lib/: Makefile.am  hello.c
man/: Makefile.am  greet.1
po/: LINGUAS  Makevars  POTFILES  POTFILES.in  de.po  en@boldquot.po  en@quot.po  fr.po  hello.pot  ru.po
src/: Makefile.am  main.c
